style.css
body {
  margin: 0;
  min-width: 320px;

  font-family: "Roboto", sans-serif;
  font-size: 14px;
  line-height: 1.71;
  font-style: normal;
  font-weight: normal;

  color: #000;
  background-color: #fff;
}

.chat-window {
  display: flex;
  flex-direction: column;
  height: 100vh;

  background: url("./img/background.png") #333 center/cover no-repeat;
  background-attachment: fixed;

  box-sizing: border-box;
}

.chat-window__dialog {
  flex: 1 0 0;

  overflow: auto;
}

.dialog {
  display: block;
  width: 100%;
  height: 100%;

  padding-top: 40px;
  padding-bottom: 30px;

  box-sizing: border-box;
}

.message {
  display: flex;
  flex-flow: row nowrap;
  align-items: flex-start;

  margin-bottom: 20px;
  padding-left: 15px;
  padding-right: 19px;
}

.message:last-child {
  margin-bottom: 0;
}

.message_outgoing {
  flex-direction: row-reverse;
}

.message_outgoing .message__img-wrapper {
  padding-right: 0;
  padding-left: 18px;
}

.message_outgoing .message__text::before {
  left: auto;
  right: 0;
  transform: translateX(50%);
}

.message__img-wrapper {
  display: block;
  flex: none;

  padding-right: 18px;
  width: 47px;
  height: 47px;
}

.message__img {
  display: inline-block;
  vertical-align: top;
  object-fit: cover;

  width: auto;
  max-width: 100%;
  height: 100%;

  box-sizing: border-box;
}

.message__text {
  position: relative;

  max-width: 470px;

  margin-top: 0;
  margin-bottom: 0;
  padding: 10px;

  background-color: #F1F3F5;
  border-radius: 5px;

  box-sizing: border-box;
}

.message__text::before {
  content: '';

  position: absolute;
  top: 5px;
  left: 0;
  transform: translateX(-50%);

  display: inline-block;
  vertical-align: top;

  width: 0;
  height: 0;
  border: 5px solid transparent;
  border-top-color: #F1F3F5;
}

.date-divider {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;

  width: 100%;
  height: 0;
  margin-top: 30px;
  margin-bottom: 30px;

  border-top: 1px solid #DBDBDB;
}

.date-divider__text {
  display: inline-block;
  vertical-align: top;

  padding-left: 15px;
  padding-right: 30px;

  background: url("./img/background.png") #333 center/cover no-repeat;
  background-attachment: fixed;
}

.chat-window__panel {
  flex: none;
}

.chat-panel {
  display: block;
  width: 100%;
  height: 100%;
  padding: 20px 40px 30px 20px;

  border-top: 1px solid #DBDBDB;
  box-sizing: border-box;
}

.chat-panel__textarea-label {
	position: absolute;

	width: 1px;
	height: 1px;
	margin: -1px;
	border: 0;
	padding: 0;

	white-space: nowrap;

  clip: rect(0 0 0 0);
	overflow: hidden;
}

.chat-panel__textarea {
  display: block;
  width: 100%;
  height: 129px;
  margin-bottom: 20px;
  padding: 10px;

  border: 1px solid #DBDBDB;
  border-radius: 4px;

  font-family: "Noto Sans", sans-serif;
  font-size: 14px;
  line-height: 1.36;
  font-style: normal;
  font-weight: normal;

  color: #696969;
  resize: none;
  box-sizing: border-box;
}

.chat-panel__button {
  text-align: left;
}

.button {
  /* reset <button>, <input> styles */
  padding: 0;
  border: none;
  background-color: transparent;

  /* reset <a> styles */
  text-decoration: none;

  /* add compatibility between html elements (<a>, <button>, <input>) */
  cursor: pointer;

  /* add standart behavior of a <button> to compatibility with <a> */
  /* isolate component's rules from external influence */
  display: inline-block;
  vertical-align: top;

  /* add standart behavior of a <button> to compatibility with <a> */
  /* isolate component's rules from external influence */
  box-sizing: border-box;

  text-overflow: ellipsis;
  overflow: hidden;

  padding: 10px 22px;

  font-family: "Montserrat", sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-style: normal;
  font-weight: normal;

  color: #FFF;
  background-color: #0F54B9;
  box-shadow: 0px 4px 6px rgba(15, 84, 185, 0.3);
  border-radius: 21px;
}

